# DTEAM-django-practical-test

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml
src/: pytest.ini
src/CVProject/: celery.py  settings.py  urls.py
src/audit/: admin.py  middleware.py  models.py  tests.py  urls.py  views.py
src/audit/migrations/: 0001_initial.py
src/audit/templates/audit/: logs_list.html
src/main/: admin.py  context_processors.py  enums.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
src/main/fixtures/: initial_data.json
src/main/management/commands/: create_admin.py
src/main/migrations/: 0001_initial.py
src/main/prompts/: translation.txt
src/main/templates/main/: base.html  cv_detail.html  cv_list.html  cv_pdf.html  settings.html
