[tool.poetry]
name = "test-task-DTEAM"
version = "0.1.0"
description = "A Django-based CV management system"
authors = ["Ivan Zashchyk <ivan.zashchyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
django = "^5.2.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"